quizzly/src/index.css
/* ... */
.trivia {
  text-decoration:4px  underline wavy #3710D6;
}

.quizzly {
  color: transparent;
  background: linear-gradient(45deg, #3710D6 30%, #D02F70);
  -webkit-background-clip: text;
  -moz-background-clip: text;
  background-clip: text;
}

.hero-subtext {
  margin: 1rem 0 1.7rem;
  font: 400 1rem/1.5 'Wix Madefor Display', sans-serif;
}

/*=== QUIZ PREFERENCES ===*/
.quiz-info-cntr {
  width: 80%;
  z-index: 12;
}

.info-trigger {
  padding: 0 5% 0 12px;
  border: 1px solid #111;
}

.trigger-name {
  padding: .2em 0;
  text-overflow: ellipsis;
  text-transform: capitalize;
  white-space: nowrap;
}

.category-options {
  grid-area: category-options;
}

.expand-arrow {
  font-variation-settings: 'wght' 300;
  transition: .3s transform ease;
}

.info-dropdown {
  max-height: 150px;
  margin: .2rem 0;
  background: #e8e8e897;
  overflow: auto;
  -webkit-backdrop-filter: blur(10px);
  backdrop-filter: blur(10px);
}

.info-option-label {
  display: block;
  padding: .5rem 5% .5rem .75rem;
  line-height: 1.2;
}

.info-option:checked + .info-option-label {
  background: #3710D6;
}

.difficulty-options {
  grid-area: difficulty-options;
}

.type-options {
  grid-area: type-options;
}

/*=== START QUIZ BTN ===*/
.start-quiz-btn {
  grid-area: start-btn;
}


/*===================== RIGHT COL =====================*/
.right-col {
  order: -1;
  background: transparent url(assets/images/hero_img_black.png) center/cover no-repeat;
  height: 300px;
  margin: 1.5rem 0;
  animation: 1.5s bounce alternate infinite;
}


/*===================== QUIZ FORM =====================*/
.quiz-form {
  z-index: 99;
  max-width: 800px;
  padding: 3rem 1.5rem 4rem;
}

.question-fieldset {
  grid-template-columns: 1.5rem repeat(4, 1fr);
  grid-template-rows: repeat(2, auto);
  grid-auto-rows: auto;
  justify-content: start;
}

.question-fieldset:not(:last-of-type) {
  margin-bottom: 2.5rem;
}

.question {
  grid-column: 1/6;
  grid-row: 1/2;
  font: 700 1.1rem/1.5 'Quicksand', sans-serif;
}

.answer-label:first-of-type, .answer-label:nth-of-type(3) {
  grid-column: 2/4;
}

.answer-label:nth-of-type(2), .answer-label:nth-of-type(4) {
  grid-column: 4/6;
}

.answer-label {
  padding: .75rem 1rem;
  border: 1px solid #3710D6;
}

.answer-label:has(.answer-radio:checked) {
  border-color: #D02F70;
}

.answer-label:has(.answer-radio:focus-visible:not(.answer-radio:checked)) {
  outline: none;
}

.end-quiz-btn {
  width: calc(100% - 2rem);
}

/* === SOLUTION SCORE === */
.solution-score {
  text-shadow: 1px 1px 0 #f6f6f6;
  font: 700 1.25rem/1.5 'Wix Madefor Display', sans-serif;
}


/*===================== RESULT =====================*/
.result-cntr {
  padding: 2rem 0;
  z-index: 1000;
  overflow-y: scroll;
}

.result {
  width: 85%;
  height: 400px;
}

.result-message-cntr {
  height: 50%;
  background: #3710D6 url(assets/images/quiz_bg.png) left/cover no-repeat;
}

.result-message {
  padding: 0 5% 2% 5%;
  text-shadow: 0 0 1px #000;
  font: 500 1.5rem/1.2 'Quicksand', sans-serif;
}

.result-img-cntr {
  padding: 1rem 1.2rem;
  width: -moz-fit-content;
  width: fit-content;
  height: fit-content;
  height: -moz-fit-content;
  margin: auto auto -10% auto;
  border-radius: 50%;
  box-shadow: -1px -1px 50px #fdf3bb inset;
}

.result-img {
  width: 60px;
}

.result-score {
  margin-block: 20% 10%;
  font: 700 2rem/1 'Wix Madefor Display', sans-serif;
}

.result-btn {
  padding: 1.1rem 2.1rem;
  font: 500 1rem/0 'Wix Madefor Display', sans-serif;
}

.result-btn:is(:focus-visible, :hover) {
  color: #3710D6;
  box-shadow: -2px -2px 0 #D02F70 inset;
}

.quiz-details {
  gap: 1.5rem;
  padding: 0 0 2rem 1.7rem;
}

.quiz-details h2 {
  font: 500 1.85rem/1 'Quicksand', sans-serif;
}

.quiz-details-inner, 
.preferred-difficulty-and-type {
  gap: .25rem;
}

.preferred-difficulty-and-type {
  justify-content: end;
}

.countdown {
  width: 50%;
  height: 8px;
}

.countdown, .countdown::-webkit-progress-bar {
  background-color: #F5DEEB;
} 

.countdown::-webkit-progress-value {
  background-color: #D02F70;
  transition: .5s all ease;
}   
.countdown::-moz-progress-bar {
  background-color: #D02F70;
  transition: .5s all ease;
} 

.time-up-message {
  font: 700 6rem/1 'Dancing Script', cursive;
  text-shadow: 2px 2px 0 #f6f6f6;
  transition: .5s transform ease-in-out;
  transform: scale(0);
}

.show-time-up-message {
  transform: scale(1);
}

/*===================== DIALOG =====================*/
.dialog-modal {
  margin: auto;
  padding: 2.65rem 1.5rem 4.85rem 1.5rem;
}

.dialog-modal > p {
  line-height: 1.5;
}

.warning-icon {
  margin-block-end: 1rem;
  font-size: 2.5rem;
  color: #ff9100;
  font-variation-settings:
  'FILL' 1
}

.close-dialog-modal-btn {
  align-self: flex-end;
  padding: 1rem 0;
  font-size: .85rem;
}

.close-dialog-modal-btn:is(:focus, :focus-visible, :hover) {
  background: #fc3d89;
}

/*===================== KEYFRAMES =====================*/
@keyframes bounce {
  0% {
    transform: translateY(0);
  }

  100% {
    transform: translateY(6px);
  }
}

@keyframes bgGradient {
  0% {
    background: linear-gradient(125deg, #3710D6, #3710D6, #D02F70);
  }
  50% {
    background: linear-gradient(125deg, #3710D6, #3710D6, #3710D6, #3710D6, #D02F70 2%, #3710D6);
  }
  100% {
    background: linear-gradient(125deg, #D02F70 2%, #D02F70 2%, #D02F70 2%, #D02F70 2%, #3710D6, #3710D6);
  }
}

/*===================== GRADIENT BACKGROUNDS =====================*/
.gradient {
  z-index: 0;
  background-image: url(assets/images/gradient.png);
}

.gradient-quiz {
  left: -190px;
  background: transparent url(assets/images/gradient.png) center/70% no-repeat;
}

.gradient-home1 {
  display: none;
  top: 0;
  right: 0;
  width: 500px;
  background: transparent url(assets/images/gradient.png) -10% 110%/170% no-repeat;
}

.gradient-home2 {
  height: 500px;
  background: transparent url(assets/images/gradient.png) -150px 900%/150% no-repeat;
}
/* ... */

